dc/s2n-quic-dc/src/snapshots/stream__reader__tests__server_init_with_fin_suppresses_max_data_large_payload.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG Reader complete - all data consumed stream_id=1 final_size=Some(524289) consumed_len=524289
0:00:00.000000000 [main] DEBUG event=on_complete prev=Open next=Complete location=dc/s2n-quic-dc/src/stream/reader.rs
0:00:00.000000000 [main] DEBUG Reader dropping stream_id=1 status=Complete final_size=Some(524289) consumed_len=524289 total_received_len=524289 is_writing_complete=true is_reading_complete=true
