dc/s2n-quic-dc/src/snapshots/stream__reader__tests__server_queue_validated_and_data_same_batch.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG QueueValidated received in unexpected state binding_id=1
0:00:00.000000000 [main] DEBUG Reader complete - all data consumed binding_id=1 final_size=Some(5) consumed_len=5
0:00:00.000000000 [main] DEBUG event=on_complete prev=Open next=Complete location=dc/s2n-quic-dc/src/stream/reader.rs
0:00:00.000000000 [main] DEBUG Reader dropping binding_id=1 status=Complete final_size=Some(5) consumed_len=5 total_received_len=5 is_writing_complete=true is_reading_complete=true
