dc/s2n-quic-dc/src/snapshots/stream__reader__tests__server_read_before_validate_fails.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=65535
0:00:00.000000000 [main] DEBUG Reader dropping stream_id=1 status=PendingValidation final_size=Some(5) consumed_len=0 total_received_len=5 is_writing_complete=true is_reading_complete=false
